見た目変更・記事追加

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
   <nav>
     <ul>
       <li><a href="{{ '/' | relative_url }}">Home</a></li>
-      <li><a href="{{ '/' | relative_url }}">About(作成中)</a></li>
+      <li><a href="{{ '/about' | relative_url }}">About(作成中)</a></li>
     </ul>
   </nav>
 </header>
