--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,15 @@
   {% include header.html %}
 
   <main>
+    <aside id="left-sidebar">
+      <h3>カテゴリ</h3>
+      <ul>
+        <li><a href="#">プログラミング</a></li>
+        <li><a href="#">読書</a></li>
+        <li><a href="#">日常</a></li>
+      </ul>
+    </aside>
+
     <section id="posts">
       {{ content }}
     </section>
